Added new common styles

--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -1,3 +1,25 @@
 .containerWidth {
   max-width: 720px;
+  margin: auto;
+}
+
+.postInfo {
+  display: flex;
+  align-items: center;
+  margin-top: 1.6rem;
+
+  div {
+    display: flex;
+    align-items: center;
+
+    & + div {
+      margin-left: 1.6rem;
+    }
+
+    span {
+      font-size: 0.93rem;
+      color: var(--info);
+      margin-left: 0.53rem;
+    }
+  }
 }
